fix-edit page sidebar icons not centered

--- a/src/styles/metadataeditor.scss
+++ b/src/styles/metadataeditor.scss
@@ -20,6 +20,11 @@
     color: #c33;
 }
 
+.editorNode {
+    display: flex;
+    align-items: center;
+}
+
 .editorNode img {
     height: 18px;
     margin: 0 0.35em;
